--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "title": "Sanchit_Khurana",
-    "name": "Resume",
+    "title": "Resume",
+    "name": "startbootstrap-resume",
     "version": "5.0.8",
     "scripts": {
         "start": "node_modules/.bin/gulp watch"
